@@ -78,6 +78,7 @@ SubVersion: $Id$
 	- [kevin] $1813: fix install-without-tcl-tk omitting the "misc" directory
 	- [kevin] $1819: import Insight 6.4 and merge TiEmu changes
 	- [kevin] $1826: improve configure argument filtering to make Fedora->MinGW cross builds work
+	- [kevin] $1827: override C_INCLUDE_PATH and LIBRARY_PATH for UAE host object compilation
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
